# exercicio-24-06-2021

./: .coveragerc  .dockerignore  Dockerfile  README.md  docker-compose.yml  produtos.csv  pyproject.toml  testes_api.py
base/: urls.py  views.py
base/static/css/: styles.css
base/templates/: base.html
base/templates/partials/: menu.html  rodape.html
scripts/: run.sh
seller/: admin.py  forms.py  models.py  serializers.py  urls.py  util.py  views.py
seller/migrations/: 0001_initial.py
seller/templates/: seller_form.html  seller_list.html
setup/: settings.py  urls.py
